--- a/cmd/web/resource/app.example.ini
+++ b/cmd/web/resource/app.example.ini
@@ -1,9 +1,10 @@
 [gocd]
-debug = true
-loc = Asia/Shanghai
 cookie_key_pair = example
-domain = 0.0.0.0:8000
+debug = true
+domain = mjj.cx
+web_listen = 0.0.0.0:8000
+loc = Asia/Shanghai
 [third_party]
-sentry_dsn = "https://example:xx@example.io/"
 github_oauth2_client_id = example
 github_oauth2_client_secret = example
+sentry_dsn = "https://example:xx@example.io/"
