--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 version: "0.0.{build}"
 skip_tags: true
-clone_folder: c:\gopath\src\github.com\gogits\gogs
+clone_folder: c:\gopath\src\git.cm\naiba\gocd
 clone_depth: 1
 
 environment:
