--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,20 +1,34 @@
 version: "{build}"
-skip_tags: true
+
+# Source Config
+
 clone_folder: c:\gopath\src\git.cm\naiba\gocd
-clone_depth: 1
+
+# Build host
 
 environment:
   GOPATH: c:\gopath
+  DEPTESTBYPASS501: 1
   GOVERSION: 1.9
+
+init:
+  - git config --global core.autocrlf input
+
+# Build
+
+install:
+  # Install the specific Go version.
+  - rmdir c:\go /s /q
+  - appveyor DownloadFile https://storage.googleapis.com/golang/go%GOVERSION%.windows-amd64.msi
+  - msiexec /i go%GOVERSION%.windows-amd64.msi /q
+  - choco install bzr
+  - set Path=c:\go\bin;c:\gopath\bin;C:\Program Files (x86)\Bazaar\;C:\Program Files\Mercurial\%Path%
+  - go version
+  - go env
 
 build: false
 deploy: false
 
-install:
-  - go build -v
-
-notifications:
-  - provider: Email
-    to:
-      - 1@5.nu
-    on_build_success: false
+test_script:
+  - go build git.cm/naiba/gocd/cmd/web
+  - for /f "" %%G in ('go list git.cm/naiba/gocd/...') do ( go test %%G & IF ERRORLEVEL == 1 EXIT 1)
