[fix] gin package

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -46,8 +46,8 @@
   name = "github.com/gin-contrib/sessions"
 
 [[constraint]]
+  branch = "master"
   name = "github.com/gin-gonic/gin"
-  version = "1.2.0"
 
 [[constraint]]
   branch = "master"
