--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,7 +27,7 @@ test_script:
 
     dir
 
-    for /f "" %%G in ('go list git.cm/naiba/gocd/...') do ( go test %%G & IF ERRORLEVEL == 1 EXIT 1)
+    for /f "" %%G in ('go list git.cm/naiba/gocd/...') do ( go test -v %%G & IF ERRORLEVEL == 1 EXIT 1)
 
     go build git.cm/naiba/gocd/cmd/web
 deploy: off
