--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,23 @@
 language: go
 go:
   - master
-
 env:
-  - GO15VENDOREXPERIMENT=1
-
+  - "PATH=/home/travis/gopath/bin:$PATH"
+before_install:
+  - go get github.com/mitchellh/gox
+  - gox -build-toolchain
+  - go get github.com/tcnksm/ghr
+  - go get github.com/axw/gocov/gocov
+  - go get github.com/mattn/goveralls
+  - go get code.google.com/p/go.tools/cmd/cover
+  - go get golang.org/x/lint/golint
+  - go get github.com/tmthrgd/go-bindata/...
 script:
-  - ls -al
-  - go build -v github.com/naiba/nocd/cmd/web
-  - go test -v -cover -race ./...
+  - go list ./... | xargs -L1 golint
+  - go test -v -race -covermode=count -coverprofile=coverage.out ./...
+  - goveralls -coverprofile=coverage.out -service travis-ci -repotoken $COVERALLS_TOKEN
+after_success:
+  - cd cmd/web
+  - go-bindata resource/...
+  - gox -output "dist/{{.OS}}_{{.Arch}}_{{.Dir}}"
+  - ghr --username tcnksm-sample --token $GITHUB_TOKEN --replace --prerelease --debug pre-release dist/
