--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ env:
   - "PATH=/home/travis/gopath/bin:$PATH"
 before_install:
   - go get github.com/mitchellh/gox
+  - gox -build-toolchain
   - go get github.com/tcnksm/ghr
   - go get github.com/axw/gocov/gocov
   - go get github.com/mattn/goveralls
-  - go get code.google.com/p/go.tools/cmd/cover
   - go get golang.org/x/lint/golint
   - go get github.com/tmthrgd/go-bindata/...
 script:
