--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - go-bindata resource/...
 script:
   - go list ./... | xargs -L1 golint
-  - go test -v -race -covermode=count -coverprofile=coverage.out ./...
+  - go test -v -race -cover -coverprofile=coverage.out ./...
   - goveralls -coverprofile=coverage.out -service travis-ci -repotoken $COVERALLS_TOKEN
 after_success:
 
