--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,6 +1,6 @@
 # Gopkg.toml example
 #
-# Refer to https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md
+# Refer to https://golang.github.io/dep/docs/Gopkg.toml.html
 # for detailed Gopkg.toml documentation.
 #
 # required = ["github.com/user/thing/cmd/thing"]
@@ -26,16 +26,16 @@
 
 
 [[constraint]]
-  branch = "master"
-  name = "github.com/naiba/com"
-
-[[constraint]]
   name = "github.com/evalphobia/logrus_sentry"
-  version = "0.4.5"
+  version = "0.5.0"
 
 [[constraint]]
-  branch = "master"
   name = "github.com/getsentry/raven-go"
+  version = "0.2.0"
+
+[[constraint]]
+  branch="master"
+  name = "github.com/gin-gonic/gin"
 
 [[constraint]]
   branch = "master"
@@ -47,23 +47,23 @@
 
 [[constraint]]
   branch = "master"
-  name = "github.com/gin-gonic/gin"
-
-[[constraint]]
-  branch = "master"
-  name = "github.com/gogits/go-gogs-client"
+  name = "github.com/gogs/go-gogs-client"
 
 [[constraint]]
   name = "github.com/google/go-github"
-  version = "15.0.0"
+  version = "20.0.0"
 
 [[constraint]]
   name = "github.com/jinzhu/gorm"
-  version = "1.9.1"
+  version = "1.9.2"
 
 [[constraint]]
-  branch = "v3"
-  name = "gopkg.in/go-playground/webhooks.v3"
+  branch = "master"
+  name = "github.com/naiba/com"
+
+[[constraint]]
+  name = "github.com/parnurzeal/gorequest"
+  version = "0.2.15"
 
 [[constraint]]
   name = "github.com/pkg/errors"
@@ -71,7 +71,7 @@
 
 [[constraint]]
   name = "github.com/sirupsen/logrus"
-  version = "1.0.5"
+  version = "1.2.0"
 
 [[constraint]]
   branch = "master"
@@ -87,11 +87,15 @@
 
 [[constraint]]
   name = "gopkg.in/go-playground/validator.v8"
-  version = "8.18.2"
+  version = "8.18.1"
+
+[[constraint]]
+  name = "gopkg.in/go-playground/webhooks.v3"
+  version = "3.13.0"
 
 [[constraint]]
   name = "gopkg.in/ini.v1"
-  version = "1.33.0"
+  version = "1.39.3"
 
 [prune]
   go-tests = true
