--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,7 +1,10 @@
 name: Build Docker Image
 
-on: [push]
-
+on: 
+  push:
+    branches:
+      - master
+      
 jobs:
   build-step:
     runs-on: ubuntu-latest
