📦 Migrate to ghcr.io

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,9 +12,9 @@ jobs:
       - uses: actions/checkout@master
 
       - name: Log into registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+        run: echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
 
       - name: docker build & push
         run: |
-          docker build -t docker.pkg.github.com/${{ github.repository }}/web .
-          docker push docker.pkg.github.com/${{ github.repository }}/web
+          docker build -t ghcr.io/${{ github.repository_owner }}/nocd .
+          docker push ghcr.io/${{ github.repository_owner }}/nocd
