--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,10 +1,12 @@
 name: Build Docker Image
 
-on: 
+on:
   push:
+    paths-ignore:
+      - "*.md"
     branches:
       - master
-      
+
 jobs:
   build-step:
     runs-on: ubuntu-latest
